[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/CustomizationScreen/CustomizationScreen.gd" type="Script" id=1]
[ext_resource path="res://ui/ColorPicker/CustomColorPicker.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://characters/CharacterMaterial.tres" type="Material" id=4]
[ext_resource path="res://characters/stickman/sprites/stickman1.png" type="Texture" id=5]
[ext_resource path="res://ui/CustomizationScreen/TrailSettings.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/CustomizationScreen/LoadStyleButton.tscn" type="PackedScene" id=7]

[node name="CustomizationScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 185.0, 133.0 ],
"_edit_lock_": true,
"_edit_vertical_guides_": [ 340.0, 445.0 ]
}

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 8.0
margin_right = 632.0
margin_bottom = 21.0

[node name="LoadStyleButton" parent="HBoxContainer" instance=ExtResource( 7 )]
text = "load"

[node name="StyleName" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 92.0
margin_right = 192.0
margin_bottom = 13.0
rect_min_size = Vector2( 100, 0 )
max_length = 64
placeholder_text = "style name"

[node name="SaveButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 193.0
margin_right = 219.0
margin_bottom = 13.0
text = "save"

[node name="SavedLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 220.0
margin_top = 1.0
margin_right = 393.0
margin_bottom = 12.0
size_flags_horizontal = 3
align = 1

[node name="WorkshopButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 394.0
margin_right = 492.0
margin_bottom = 13.0
disabled = true
text = "upload to workshop"

[node name="WorkshopButton2" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 493.0
margin_right = 566.0
margin_bottom = 13.0
text = "visit workshop"

[node name="OpenFolderButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 567.0
margin_right = 625.0
margin_bottom = 13.0
text = "open folder"

[node name="SeeOn" type="Label" parent="."]
margin_left = 218.0
margin_top = 266.0
margin_right = 285.0
margin_bottom = 291.0
text = "view style
on character:"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 218.0
margin_top = 114.0
margin_right = 583.0
margin_bottom = 175.0

[node name="CharacterButtonContainer" type="HBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
margin_right = 365.0
margin_bottom = 61.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -633.0
margin_top = 26.0
margin_right = -426.0
margin_bottom = 355.0

[node name="ScrollContainer2" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer2"]
margin_right = 201.0
margin_bottom = 1528.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_right = 201.0
margin_bottom = 12.0

[node name="ColorsSimpleLabel" type="Label" parent="Panel/ScrollContainer2/VBoxContainer/HBoxContainer"]
modulate = Color( 0.392157, 0.823529, 0.419608, 1 )
margin_right = 69.0
margin_bottom = 11.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Color Scheme"

[node name="ShowOutline" type="CheckButton" parent="Panel/ScrollContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 70.0
margin_right = 124.0
margin_bottom = 12.0
size_flags_horizontal = 0
text = "outline"

[node name="Control" type="Control" parent="Panel/ScrollContainer2/VBoxContainer/HBoxContainer"]
margin_left = 125.0
margin_right = 137.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.33

[node name="ResetColorButton" type="Button" parent="Panel/ScrollContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 138.0
margin_right = 201.0
margin_bottom = 12.0
size_flags_horizontal = 0
theme = ExtResource( 3 )
text = "reset colors"

[node name="MarginContainer" type="MarginContainer" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 17.0
margin_right = 201.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_constants/margin_right = 2
custom_constants/margin_left = 2

[node name="SimpleColorButtonContainer" type="GridContainer" parent="Panel/ScrollContainer2/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
margin_left = 2.0
margin_right = 199.0
custom_constants/vseparation = 3
custom_constants/hseparation = 1
columns = 6

[node name="CenterContainer" type="CenterContainer" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 22.0
margin_right = 201.0
margin_bottom = 22.0

[node name="HSeparator" type="HSeparator" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 27.0
margin_right = 201.0
margin_bottom = 31.0

[node name="ColorsAdvancedLabel" type="Label" parent="Panel/ScrollContainer2/VBoxContainer"]
modulate = Color( 0.392157, 0.823529, 0.419608, 1 )
margin_top = 36.0
margin_right = 201.0
margin_bottom = 47.0
text = "Colors - Advanced"

[node name="ColorPickers" type="TabContainer" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 52.0
margin_right = 201.0
margin_bottom = 272.0
rect_min_size = Vector2( 0, 220 )
tab_align = 0

[node name="Character" parent="Panel/ScrollContainer2/VBoxContainer/ColorPickers" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 11.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Outline" parent="Panel/ScrollContainer2/VBoxContainer/ColorPickers" instance=ExtResource( 2 )]
unique_name_in_owner = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 13.0
margin_right = 189.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Extra1" parent="Panel/ScrollContainer2/VBoxContainer/ColorPickers" instance=ExtResource( 2 )]
unique_name_in_owner = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 13.0
margin_right = 189.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Extra2" parent="Panel/ScrollContainer2/VBoxContainer/ColorPickers" instance=ExtResource( 2 )]
unique_name_in_owner = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 13.0
margin_right = 189.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/ScrollContainer2/VBoxContainer"]
visible = false
margin_top = 277.0
margin_right = 201.0
margin_bottom = 289.0

[node name="Extra1Button" type="CheckButton" parent="Panel/ScrollContainer2/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_right = 55.0
margin_bottom = 12.0
text = "extra1"

[node name="Extra2Button" type="CheckButton" parent="Panel/ScrollContainer2/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 56.0
margin_right = 111.0
margin_bottom = 12.0
text = "extra2"

[node name="HSeparator2" type="HSeparator" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 277.0
margin_right = 201.0
margin_bottom = 281.0

[node name="HitsparkLabel" type="Label" parent="Panel/ScrollContainer2/VBoxContainer"]
modulate = Color( 0.392157, 0.823529, 0.419608, 1 )
margin_top = 286.0
margin_right = 201.0
margin_bottom = 297.0
text = "Hit Spark"

[node name="MarginContainer2" type="MarginContainer" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 302.0
margin_right = 201.0
margin_bottom = 302.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="HitsparkButtonContainer" type="HFlowContainer" parent="Panel/ScrollContainer2/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
margin_left = 5.0
margin_right = 196.0

[node name="HSeparator3" type="HSeparator" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 307.0
margin_right = 201.0
margin_bottom = 311.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 316.0
margin_right = 201.0
margin_bottom = 328.0

[node name="TrailEditLabel" type="Label" parent="Panel/ScrollContainer2/VBoxContainer/HBoxContainer2"]
modulate = Color( 0.392157, 0.823529, 0.419608, 1 )
margin_right = 126.0
margin_bottom = 11.0
size_flags_horizontal = 3
text = "Aura"

[node name="ShowAura" type="CheckButton" parent="Panel/ScrollContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 127.0
margin_right = 201.0
margin_bottom = 12.0
text = "show aura"

[node name="TrailSettings" parent="Panel/ScrollContainer2/VBoxContainer" instance=ExtResource( 6 )]
unique_name_in_owner = true
margin_top = 333.0
margin_right = 201.0
margin_bottom = 1528.0

[node name="MovingSprite" type="Sprite" parent="."]
unique_name_in_owner = true
material = ExtResource( 4 )
position = Vector2( 392, 220 )
texture = ExtResource( 5 )

[node name="StaticSprite" type="Sprite" parent="."]
unique_name_in_owner = true
material = ExtResource( 4 )
position = Vector2( 392, 156 )
texture = ExtResource( 5 )

[node name="HitsparkDisplay" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2( 392, 96 )

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 591.0
margin_top = 337.0
margin_right = 632.0
margin_bottom = 354.0
size_flags_horizontal = 0
text = "go back"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="WorkshopUpdatedLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color( 0.113725, 0.552941, 0.960784, 1 )
margin_left = 475.0
margin_top = 21.0
margin_right = 618.0
margin_bottom = 37.0
text = "style uploaded to workshop"
scroll_active = false

[connection signal="text_changed" from="HBoxContainer/StyleName" to="." method="_on_StyleName_text_changed"]
[connection signal="text_entered" from="HBoxContainer/StyleName" to="." method="_on_StyleName_text_entered"]
[connection signal="pressed" from="HBoxContainer/WorkshopButton" to="." method="_on_WorkshopButton_pressed"]
[connection signal="pressed" from="HBoxContainer/WorkshopButton2" to="." method="_on_WorkshopButton2_pressed"]
[connection signal="pressed" from="HBoxContainer/OpenFolderButton" to="." method="_on_OpenFolderButton_pressed"]
[connection signal="meta_clicked" from="WorkshopUpdatedLabel" to="." method="_on_WorkshopUpdatedLabel_meta_clicked"]
